--- a/Assignments/Assignment 1/Assignment1/Assignment1/Views/Client/Index.cshtml
+++ b/Assignments/Assignment 1/Assignment1/Assignment1/Views/Client/Index.cshtml
@@ -8,21 +8,27 @@
 <h2>Clients</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Add new client</a>
 </p>
 <table class="table">
     <thead>
         <tr>
-            <th></th>
+            <th>Name</th>
+            <th>Address</th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+               @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>    
+               @Html.DisplayFor(modelItem => item.Address)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.GetId() }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.GetId() })
             </td>
         </tr>
 }
