Finished Login Page & Error Handling + Inserted Unit Tests

--- a/Assignments/Assignment 1/Assignment1/Assignment1/Views/Account/Index.cshtml
+++ b/Assignments/Assignment 1/Assignment1/Assignment1/Views/Account/Index.cshtml
@@ -6,7 +6,10 @@
 }
 
 <h2>Index</h2>
-
+<h3>
+    <a asp-controller="Client" asp-action="Index">Go to Clients</a>
+</h3>
+<br />
 <p>
     <a asp-action="Create">Create New</a> |
     @Html.ActionLink("Transfer", "Transfer", "Account") | 
