--- a/Assignments/Assignment 1/Assignment1/Assignment1/Views/Shared/_Layout.cshtml
+++ b/Assignments/Assignment 1/Assignment1/Assignment1/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Assignment1</title>
+    <title>@ViewData["Title"] - Bank App</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -26,13 +26,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Assignment1</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -41,7 +37,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2018 - Assignment1</p>
+            <p>&copy; 2018 -Bank App</p>
         </footer>
     </div>
 
