--- a/Assignments/Assignment 1/Assignment1/Assignment1/Views/Client/Index.cshtml
+++ b/Assignments/Assignment 1/Assignment1/Assignment1/Views/Client/Index.cshtml
@@ -7,9 +7,9 @@
 
 <h2>Clients</h2>
 
-<h3>
-    <a asp-controller="Account" asp-action="Index">Accounts</a>
-</h3>
+<p>
+    <a asp-controller="Account" asp-action="Index">Go to Accounts</a>
+</p>
 <p>
     <a asp-action="Create">Add new client</a>
 </p>
