--- a/Assignments/Assignment 1/Assignment1/Assignment1/Views/Shared/_Layout.cshtml
+++ b/Assignments/Assignment 1/Assignment1/Assignment1/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+                <a asp-area="" asp-controller="Login" asp-action="Login" class="navbar-brand">Log out</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -37,7 +38,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2018 -Bank App</p>
+            <p>&copy; 2018 - Bank App</p>
         </footer>
     </div>
 
